# python-winytils

./: .gitignore  PUBLIC.txt  README.md  publish.sh  pyproject.toml  requirements.txt  upload.sh
src/winytils/: __doc__.py  __init__.py  guiwin.py  machine_state_watcher.py  pc_state.py  privileges.py  utils.py  win11toast.py  windows.py  windowshello.py  workstation.py  workstation_events.py
tests/: test.py
